too many things

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -5,3 +5,10 @@
 .todoForm{
   margin-bottom:50px;
 }
+.loginErrors{
+  color:red;
+}
+.vertical-align {
+    display: flex;
+    align-items: center;
+}
