--- a/public/views/login.html
+++ b/public/views/login.html
@@ -5,16 +5,17 @@
       <a href="#/" class="navbar-brand">ToDo App</a>
     </div>
     <div class="navbar-right">
-      <form class="navbar-form">
+      <form class="navbar-form" ng-submit="logUserIn()">
+        <span class="loginErrors">{{loginErrors.logIn}}</span>
         <div class="input-group">
           <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-          <input ng-model="loginInfo.username" type="text" class="form-control" placeholder="username">
+          <input ng-model="loginInfo.username" type="text" class="form-control" placeholder="username" required>
         </div>
         <div class="input-group">
           <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-          <input ng-model="loginInfo.password" type="password" class="form-control" placeholder="Password">
+          <input ng-model="loginInfo.password" type="password" class="form-control" placeholder="Password" required>
         </div>
-        <button type="submit" class="btn btn-default" ng-click="logUserIn()">Log In</button>
+        <button type="submit" class="btn btn-default" ng-disabled="frm.$invalid">Log In</button>
         <button type="button" class="btn btn-success" id="register-btn" data-toggle="modal" data-target="#register-modal">Sign up</button>
       </form>
     </div>
@@ -26,7 +27,10 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h4>Wohoo</h4>
+        <h3>
+          <span>Wohoo</span>
+          <span class="loginErrors"> {{loginErrors.register}}</span>
+        </h3>
       </div>
       <div class="modal-body">
         <form class="form-vertical" name="signUpForm">
