--- a/public/views/todo.html
+++ b/public/views/todo.html
@@ -20,7 +20,7 @@
           <div class="col-sm-2">{{todo.createdBy}}</div>
           <div class="col-sm-6">{{todo.title}}</div>
           <div class="col-sm-2 col-sm-offset-2 btn-group" role="group">
-            <button type="button" class="btn btn-warning">Edit</button>
+            <a type="button" class="btn btn-warning" ng-href="#/todos/{{todo._id}}/edit">Edit</a>
             <button type="button" class="btn btn-danger">Delete</button>
           </div>
         </div>
